# XFIChecker

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.sh  xfichecker.cpp
.github/workflows/: ci.yml
CliUI/: cli.cpp  cli.h  cli_msgs.h
HashUtils/: hashing.cpp  hashing.h
core/: xfiler.cpp  xfiler.h
modules/: fastupdater.h  xfilerrorhandler.h
resources/: res.aps  res.rc
unit_tests/: CMakeLists.txt  unit_test.cpp
